--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,99 @@
-.qodo
+# Dependencies
+node_modules/
+bun.lockb
+package-lock.json
+yarn.lock
+
+# Build artifacts
+dist/
+out/
+cache/
+broadcast/
+lib/
+build/
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+.pnpm-debug.log*
+
+# Environment variables
+.env
+.env.*
+!.env.example
+
+# TypeScript
+*.tsbuildinfo
+
+# IDE & Editor
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Cache
+.cache
+.npm
+.eslintcache
+.stylelintcache
+.parcel-cache
+
+# Runtime
+*.pid
+*.seed
+*.pid.lock
+pids/
+
+# Coverage
+coverage/
+*.lcov
+.nyc_output/
+.c8_output/
+
+# Testing
+.jest/
+playwright-report/
+test-results/
+
+# Temporary files
+*.tmp
+*.temp
+.temp/
+.tmp/
+
+# Package artifacts
+*.tgz
+*.tar.gz
+
+# ESLint
+.eslintcache
+
+# Prettier
+.prettierignore
+
+# AI/ML
+.qodo/
+
+# Optional: Keep deployment history but ignore temp files
+deployments/**/run-*.json
+!deployments/**/latest.json
+
+# Local development
+.local/
+.vercel/
+
+# Foundry specific
+forge-cache/
+foundry-cache/
+deployments/
