--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@crutrade/contracts",
+  "name": "crutrade-contracts",
   "version": "1.0.1",
   "description": "CruTrade Smart Contracts - ABIs and Addresses",
   "main": "dist/index.js",
