--- a/package.json
+++ b/package.json
@@ -14,12 +14,9 @@
   "scripts": {
     "clean": "rm -rf dist out cache broadcast",
     "build": "forge build --via-ir && tsup",
-    "deploy:local": "source .env && NODE_ENV=local forge script script/deploy.s.sol --rpc-url http://127.0.0.1:8545 --private-key $PRIVATE_KEY_LOCAL --broadcast --via-ir && bun script/init.ts && bun script/update-package.ts",
-    "deploy:testnet": "source .env && NODE_ENV=dev forge script script/deploy.s.sol --rpc-url $RPC_DEV --private-key $PRIVATE_KEY --broadcast --via-ir --silent && bun script/init.ts && bun script/update-package.ts",
-    "deploy:mainnet": "source .env && NODE_ENV=production forge script script/deploy.s.sol --rpc-url $RPC --private-key $PRIVATE_KEY --broadcast --via-ir --silent && bun script/init.ts && bun script/update-package.ts",
-    "init:local": "source .env && NODE_ENV=local bun script/init.ts",
-    "init:testnet": "source .env && NODE_ENV=dev bun script/init.ts",
-    "init:mainnet": "source .env && NODE_ENV=production bun script/init.ts",
+    "deploy:local": "source .env && NODE_ENV=local forge script script/deploy.s.sol --rpc-url http://127.0.0.1:8545 --private-key $PRIVATE_KEY_LOCAL --broadcast --via-ir && bun script/update-package.ts",
+    "deploy:testnet": "source .env && NODE_ENV=dev forge script script/deploy.s.sol --rpc-url $RPC_DEV --private-key $PRIVATE_KEY --broadcast --via-ir --silent && bun script/update-package.ts",
+    "deploy:mainnet": "source .env && NODE_ENV=production forge script script/deploy.s.sol --rpc-url $RPC --private-key $PRIVATE_KEY --broadcast --via-ir --silent && bun script/update-package.ts",
     "anvil": "anvil --host 127.0.0.1 --port 8545 --chain-id 31337",
     "update-package": "bun script/update-package.ts",
     "test": "forge test",
