--- a/foundry.toml
+++ b/foundry.toml
@@ -2,7 +2,7 @@
 solc = "0.8.30"
 src = "src"
 out = "out"
-libs = ["lib"]
+libs = ["lib", "dependencies"]
 evm_version = "cancun"
 auto_detect_solc = false
 ffi = true
@@ -10,16 +10,13 @@ optimizer = true
 optimizer-runs = 200
 via_ir = true
 
-
-# Remappings
-remappings = [
-    "forge-std/=lib/forge-std/src/",
-    "@openzeppelin/contracts/=lib/openzeppelin-contracts-upgradeable/lib/openzeppelin-contracts/contracts/",
-    "@openzeppelin/contracts-upgradeable/=lib/openzeppelin-contracts-upgradeable/contracts/",
-    "@openzeppelin-foundry-upgrades/=lib/openzeppelin-foundry-upgrades/src/"
-]
-
 # File permissions for deployment saves
 fs_permissions = [
     { access = "read-write", path = "./deployments" }
 ]
+
+[dependencies]
+forge-std = "1.9.7"
+"@openzeppelin-contracts" = "5.0.1"
+"@openzeppelin-contracts-upgradeable" = "5.0.1"
+
