--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "scripts": {
     "clean": "rm -rf dist out cache broadcast",
     "build": "forge build --via-ir && tsup",
-    "deploy:local": "source .env && NODE_ENV=local forge script script/deploy.s.sol --rpc-url http://127.0.0.1:8545 --private-key $PRIVATE_KEY_LOCAL --broadcast --via-ir && bun script/update-package.ts",
-    "deploy:testnet": "source .env && NODE_ENV=dev forge script script/deploy.s.sol --rpc-url $RPC_DEV --private-key $PRIVATE_KEY --broadcast --via-ir --silent && bun script/update-package.ts",
-    "deploy:mainnet": "source .env && NODE_ENV=production forge script script/deploy.s.sol --rpc-url $RPC --private-key $PRIVATE_KEY --broadcast --via-ir --silent && bun script/update-package.ts",
+    "deploy:local": "bun script/deploy.ts local",
+    "deploy:testnet": "bun script/deploy.ts testnet",
+    "deploy:mainnet": "bun script/deploy.ts mainnet",
     "anvil": "anvil --host 127.0.0.1 --port 8545 --chain-id 31337",
     "update-package": "bun script/update-package.ts",
     "test": "forge test",
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/node": "^24.0.3",
     "tsup": "^8.0.0",
     "typescript": "^5.8.0"
   }
