--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "repository": "https://github.com/crutrade/contracts",
   "dependencies": {
-    "viem": "^2.28.0"
+    "viem": "^2.28.0",
+    "ethers": "^6.11.1"
   },
   "devDependencies": {
     "@types/bun": "latest",
