--- a/package.json
+++ b/package.json
@@ -4,33 +4,51 @@
   "description": "CruTrade Smart Contracts - ABIs and Addresses",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "typechain": "types/index.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
+    },
+    "./types": {
+      "types": "./types/index.ts",
+      "import": "./types/index.ts"
+    }
+  },
   "publishConfig": {
     "access": "public"
   },
   "files": [
     "dist",
-    "deployments"
+    "deployments",
+    "types"
   ],
   "scripts": {
     "clean": "rm -rf dist out cache broadcast",
-    "build": "forge build --via-ir && tsup",
+    "build": "forge build --via-ir && tsup && npm run generate-types && npm run create-deployments",
     "deploy:local": "bun script/deploy.ts local",
-    "deploy:testnet": "bun script/deploy.ts testnet",
+    "deploy:testnet": "bun script/deploy.ts fuji",
     "deploy:mainnet": "bun script/deploy.ts mainnet",
     "anvil": "anvil --host 127.0.0.1 --port 8545 --chain-id 31337",
     "update-package": "bun script/update-package.ts",
+    "generate-types": "bun script/generate-types.ts",
     "test": "forge test",
-    "prepublishOnly": "npm run build"
+    "test-package": "bun script/test-package.ts",
+    "prepublishOnly": "npm run build",
+    "create-deployments": "bun script/create-deployments.ts"
   },
   "repository": "https://github.com/crutrade/contracts",
   "dependencies": {
-    "viem": "^2.28.0",
-    "ethers": "^6.11.1"
+    "ethers": "^6.11.1",
+    "viem": "^2.28.0"
   },
   "devDependencies": {
+    "@typechain/ethers-v6": "^0.5.1",
     "@types/bun": "latest",
     "@types/node": "^24.0.3",
     "tsup": "^8.0.0",
+    "typechain": "^8.3.2",
     "typescript": "^5.8.0"
   }
 }
