--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "repository": "https://github.com/crutrade/contracts",
   "dependencies": {
+    "dotenv": "^17.2.1",
+    "ethers": "^6.15.0",
     "viem": "^2.28.0"
   },
   "devDependencies": {
