--- a/foundry.toml
+++ b/foundry.toml
@@ -2,7 +2,7 @@
 solc = "0.8.30"
 src = "src"
 out = "out"
-libs = ["lib", "dependencies"]
+libs = ["lib", "dependencies", "node_modules"]
 evm_version = "cancun"
 auto_detect_solc = false
 ffi = true
@@ -10,9 +10,14 @@ optimizer = true
 optimizer-runs = 200
 via_ir = true
 
-# File permissions for deployment saves
+# Build info and storage layout for upgrades validation
+build_info = true
+extra_output = ["storageLayout"]
+
+# File permissions for deployment saves and OpenZeppelin Foundry API
 fs_permissions = [
-    { access = "read-write", path = "./deployments" }
+    { access = "read-write", path = "./deployments" },
+    { access = "read", path = "./out" }
 ]
 
 [dependencies]
